--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-feature text-center mb-30 wow fadeInUp" data-wow-delay=".2s">
                             <div class="feature-img mb-20">
-                                <img src="assets/img/feature-1.svg" alt="">
+                                <img src="assets/img/main 3.png" alt="">
                             </div>
                             <div class="feature-content">
                                 <h5>Cost savings</h5>
@@ -183,7 +183,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-feature text-center mb-30 wow fadeInUp" data-wow-delay=".4s">
                             <div class="feature-img mb-25">
-                                <img src="assets/img/featu re-2.svg" alt="">
+                                <img src="assets/img/main 2.png" alt="">
                             </div>
                             <div class="feature-content">
                                 <h5>Accessibility</h5>
@@ -194,7 +194,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-feature text-center mb-30 wow fadeInUp" data-wow-delay=".6s">
                             <div class="feature-img mb-20">
-                                <img src="assets/img/feature-3.svg" alt="">
+                                <img src="assets/img/main 1.png" alt="">
                             </div>
                             <div class="feature-content">
                                 <h5>Data accuracy</h5>
