--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-feature text-center mb-30 wow fadeInUp" data-wow-delay=".2s">
                             <div class="feature-img mb-20">
-                                <img src="assets/img/main 3.png" alt="">
+                                <img src="assets/img/main 3.png" alt="Image" width="150px" height="150px" >
                             </div>
                             <div class="feature-content">
                                 <h5>Cost savings</h5>
