--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                         <a class="page-scroll" href="#contact">Contact</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#contact">Register</a>
+                                        <a class="page-scroll" href="#contact">Register Land</a>
                                     </li>
                                 </ul>
                             </div> <!-- navbar collapse -->
@@ -102,7 +102,7 @@
                         <div class="hero-content-wrapper">
                             <h1 class="text-white wow fadeInDown" data-wow-delay=".2s">Land Registration using <span class="sub-hero">Blockchain Technology</span></h1>
                             <p class="text-white wow fadeInLeft"  data-wow-delay=".4s">Empowering Efficiency and Trust: The Future of Registry Systems with Blockchain Technology. Revolutionizing Trust and Transparency in Record-Keeping </p>
-                            <a href="./register.html" class="theme-btn wow fadeInUp"  data-wow-delay=".6s">Register Now</a>
+                            <a href="http://localhost:3000/" class="theme-btn wow fadeInUp"  data-wow-delay=".6s">Register Land</a>
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-5">
