--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                 <p class="text-white mb-30 wow fadeInUp" data-wow-delay=".4s">We understand that the traditional land registration process can be cumbersome, time-consuming, and prone to errors, but with our blockchain-based platform, we are confident that we can simplify the process and make it more accessible to everyone.
 
                                     Thank you for choosing our website, and we look forward to serving you in the best way possible..</p>
-                                <a href="#" class="theme-btn wow fadeInUp" data-wow-delay=".6s">Buy Land Now</a>
+                                <a href="http://localhost:3000/" class="theme-btn wow fadeInUp" data-wow-delay=".6s">Register Land Now</a>
                             </div>
                         </div>
                     </div>
